--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,20 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#333333" />
-        <meta name="description" content="Personal site of Karen Ying" />
+        <meta name="description" content="Personal site of Karen Ying." />
+
+        <meta property="og:title" content="karenying.com" />
+        <meta
+            property="og:description"
+            content="Personal site of Karen Ying."
+        />
+        <meta property="og:image" content="http://karenying.com/preview.png" />
+        <meta property="og:url" content="http://karenying.com/" />
+        <meta name="twitter:card" content="summary_large_image" />
+
+        <meta property="og:site_name" content="karenying.com" />
+        <meta name="twitter:image:alt" content="karenying.com" />
+
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
