--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
             property="og:description"
             content="Personal site of Karen Ying."
         />
-        <meta property="og:image" content="http://karenying.com/preview.png" />
-        <meta property="og:url" content="http://karenying.com/" />
+        <meta property="og:image" content="https://karenying.com/preview.png" />
+        <meta property="og:url" content="https://karenying.com/" />
         <meta name="twitter:card" content="summary_large_image" />
 
         <meta property="og:site_name" content="karenying.com" />
