--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,23 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="%PUBLIC_URL%/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            href="%PUBLIC_URL%/favicon-32x32.png"
+            sizes="32x32"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            href="%PUBLIC_URL%/favicon-16x16.png"
+            sizes="16x16"
+        />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#333333" />
