Update dark gray

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#333333" />
+        <meta name="theme-color" content="#2A2B2E" />
         <meta name="description" content="Personal site of Karen Ying." />
 
         <meta property="og:title" content="karenying.com" />
