Add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>karenying.com</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-170086604-1"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-170086604-1');
+        </script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
