--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,15 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#2A2B2E" />
-        <meta name="description" content="Personal site of Karen Ying." />
+        <meta
+            name="description"
+            content="Personal/portfolio site of Karen Ying."
+        />
 
         <meta property="og:title" content="karenying.com" />
         <meta
             property="og:description"
-            content="Personal site of Karen Ying."
+            content="Personal/portfolio site of Karen Ying."
         />
         <meta property="og:image" content="https://karenying.com/preview.png" />
         <meta property="og:url" content="https://karenying.com/" />
