--- a/public/index.html
+++ b/public/index.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="%PUBLIC_URL%/apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            href="%PUBLIC_URL%/favicon-32x32.png"
-            sizes="32x32"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            href="%PUBLIC_URL%/favicon-16x16.png"
-            sizes="16x16"
-        />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#2A2B2E" />
-        <meta
-            name="description"
-            content="Personal/portfolio site of Karen Ying."
-        />
+  <head>
+    <meta charset="utf-8" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+      sizes="16x16"
+    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#2A2B2E" />
+    <meta name="description" content="Personal/portfolio site of Karen Ying." />
 
-        <meta property="og:title" content="karenying.com" />
-        <meta
-            property="og:description"
-            content="Personal/portfolio site of Karen Ying."
-        />
-        <meta property="og:image" content="https://karenying.com/preview.png" />
-        <meta property="og:url" content="https://karenying.com/" />
-        <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content="karenying.com" />
+    <meta
+      property="og:description"
+      content="Personal/portfolio site of Karen Ying."
+    />
+    <meta property="og:image" content="https://karenying.com/preview.png" />
+    <meta property="og:url" content="https://karenying.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
 
-        <meta property="og:site_name" content="karenying.com" />
-        <meta name="twitter:image:alt" content="karenying.com" />
+    <meta property="og:site_name" content="karenying.com" />
+    <meta name="twitter:image:alt" content="karenying.com" />
 
-        <!--
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -53,26 +50,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>karenying.com</title>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script
-            async
-            src="https://www.googletagmanager.com/gtag/js?id=UA-170086604-1"
-        ></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
+    <title>karenying.com</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-170086604-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-            gtag('config', 'UA-170086604-1');
-        </script>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-        <!--
+      gtag('config', 'UA-170086604-1');
+    </script>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -81,5 +78,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    -->
+  </body>
 </html>
