Update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       property="og:description"
       content="Personal/portfolio site of Karen Ying."
     />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://karenying.com/preview.png" />
     <meta property="og:url" content="https://karenying.com/" />
     <meta name="twitter:card" content="summary_large_image" />
